--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Rock, paper, scissors game</h1>
-    <p>Open the terminal to play :)</p>
+    <div class="main-container">
+        <h1>Rock, paper, scissors game</h1>
+        <p>Open the terminal to play :)</p>
+    </div>
 </body>
 </html>
