added DOM functionality with buttons

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS-TOP</title>
-    <script src="./main.js"></script>
+    <script src="./main.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main-container">
         <h1>Rock, paper, scissors game</h1>
-        <p>Open the terminal to play :)</p>
+        <div class="options_container">
+            <button class="option_button button_rock">Rock</button>
+            <button class="option_button button_paper">Paper</button>
+            <button class="option_button button_scissors">Scissors</button>
+        </div>
     </div>
 </body>
 </html>
