added visual feedback to show who wins and a very basic score displayer

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
     <div class="main-container">
-        <h1>Rock, paper, scissors game</h1>
+        <div class="info-container">
+            <h1>Rock, paper, scissors game</h1>
+            <p class="instructions-tittle">Instructions:</p>
+            <p class="instructions-text">Choose an option to play against the computer</p>
+        </div>
         <div class="options_container">
             <button class="option_button button_rock">Rock</button>
             <button class="option_button button_paper">Paper</button>
             <button class="option_button button_scissors">Scissors</button>
+        </div>
+        <div class="results-container">
         </div>
     </div>
 </body>
