--- a/index.html
+++ b/index.html
@@ -6,20 +6,36 @@
     <title>RPS-TOP</title>
     <script src="./main.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main-container">
         <div class="info-container">
             <h1>Rock, paper, scissors game</h1>
-            <p class="instructions-tittle">Instructions:</p>
-            <p class="instructions-text">Choose an option to play against the computer</p>
+            <div class="instructions-container">
+                <p class="instructions-tittle">Instructions:</p>
+                <p class="instructions-text">Choose an option to play against the computer</p>
+            </div>
         </div>
-        <div class="options_container">
-            <button class="option_button button_rock">Rock</button>
-            <button class="option_button button_paper">Paper</button>
-            <button class="option_button button_scissors">Scissors</button>
+        <div class="options-container">
+            <button class="option-button button-rock">Rock</button>
+            <button class="option-button button-paper">Paper</button>
+            <button class="option-button button-scissors">Scissors</button>
+        </div>
+        <div class="round-information">
+            <p class="round-counter">Current round: 0</p>
+            <p class="round-winner">-</p>
+        </div>
+        <div class="score-info">
+            <p class="human-score">Your score: 0</p>
+            <p class="computer-score">Computer score: 0</p>
         </div>
         <div class="results-container">
+        </div>
+        <div class="reset-game">
+            <button class="reset-button">Reset game</button>
         </div>
     </div>
 </body>
