styles are finished and unnecessary code removed

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 <body>
     <div class="main-container">
         <div class="info-container">
-            <h1>Rock, paper, scissors game</h1>
+            <h1 class="game-title">Rock 🪨 paper 📃 scissors ✂️ game</h1>
             <div class="instructions-container">
                 <p class="instructions-tittle">Instructions:</p>
-                <p class="instructions-text">Choose an option to play against the computer</p>
+                <p class="instructions-text">Choose an option to play against the computer for 5 rounds and then reset the game to continue playing.</p>
             </div>
+            <hr>
         </div>
         <div class="options-container">
             <button class="option-button button-rock">Rock</button>
